--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"lucide-svelte": "^0.469.0"
 	}
 }
