--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"mdsvex": "^0.12.3",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
@@ -37,6 +38,8 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"lucide-svelte": "^0.469.0"
+		"lucide-svelte": "^0.469.0",
+		"openai": "^4.78.1",
+		"weaviate-client": "^3.3.1"
 	}
 }
