--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"lucide-svelte": "^0.469.0"
+		"lucide-svelte": "^0.469.0",
+		"weaviate-client": "^3.3.2"
 	}
 }
