--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"lucide-svelte": "^0.469.0",
+		"openai": "^4.78.1",
 		"weaviate-client": "^3.3.2"
 	}
 }
