--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@eslint/compat": "^1.2.3",
 		"@skeletonlabs/skeleton": "^3.0.0-next.10",
 		"@skeletonlabs/skeleton-svelte": "^1.0.0-next.17",
-		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
@@ -24,7 +24,6 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"mdsvex": "^0.12.3",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
@@ -38,8 +37,15 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"dompurify": "^3.2.3",
+		"highlight.js": "^11.11.1",
 		"lucide-svelte": "^0.469.0",
+		"marked": "^15.0.6",
+		"marked-highlight": "^2.2.1",
+		"marked-shiki": "^1.1.1",
 		"openai": "^4.78.1",
-		"weaviate-client": "^3.3.1"
+		"shiki": "^1.27.0",
+		"weaviate-client": "^3.3.1",
+		"zod": "^3.24.1"
 	}
 }
