--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"localDockerRestart": "docker compose down && docker compose up --build -d && docker image prune -f"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
@@ -37,7 +38,9 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"dompurify": "^3.2.3",
 		"lucide-svelte": "^0.469.0",
+		"marked": "^15.0.6",
 		"openai": "^4.78.1",
 		"weaviate-client": "^3.3.2"
 	}
