Got most of the way there on file upload to our Docker volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     - 50054:50051
     volumes:
     - weaviate_data:/var/lib/weaviate
+    - uploads_data:/uploads
     restart: on-failure:0
     environment:
       QUERY_DEFAULTS_LIMIT: 25
@@ -23,3 +24,4 @@ services:
       CLUSTER_HOSTNAME: 'node1'
 volumes:
   weaviate_data:
+  uploads_data:
