--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"dompurify": "^3.2.3",
+		"highlight.js": "^11.11.1",
 		"lucide-svelte": "^0.469.0",
 		"marked": "^15.0.6",
 		"openai": "^4.81.0",
