Got better marked + highlightjs styling to happen

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"highlight.js": "^11.11.1",
 		"lucide-svelte": "^0.469.0",
 		"marked": "^15.0.6",
+		"marked-highlight": "^2.2.1",
 		"openai": "^4.81.0",
 		"weaviate-client": "^3.3.2"
 	}
