--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@langchain/community": "^0.3.29",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"dompurify": "^3.2.3",
@@ -44,6 +45,7 @@
 		"marked": "^15.0.6",
 		"marked-highlight": "^2.2.1",
 		"openai": "^4.81.0",
+		"pdf-parse": "^1.1.1",
 		"weaviate-client": "^3.3.2"
 	}
 }
