--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,17 @@ services:
     - uploads_data:/uploads
     restart: on-failure:0
     environment:
+      CLIP_INFERENCE_API: http://multi2vec-clip:8080  # Set the inference API endpoint
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
       ENABLE_API_BASED_MODULES: 'true'
-      ENABLE_MODULES: 'text2vec-ollama,generative-ollama'
+      ENABLE_MODULES: 'text2vec-ollama,generative-ollama,multi2vec-clip'
       CLUSTER_HOSTNAME: 'node1'
+  multi2vec-clip:
+    image: cr.weaviate.io/semitechnologies/multi2vec-clip:sentence-transformers-clip-ViT-B-32
+    environment:
+      ENABLE_CUDA: '0'
 volumes:
   weaviate_data:
   uploads_data:
