--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
-		"@skeletonlabs/skeleton": "^3.0.0-next.10",
-		"@skeletonlabs/skeleton-svelte": "^1.0.0-next.17",
+		"@skeletonlabs/skeleton": "^3.1.0",
+		"@skeletonlabs/skeleton-svelte": "^1.0.0",
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -32,7 +32,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^4.0.14",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11"
@@ -41,6 +41,7 @@
 		"@langchain/community": "^0.3.29",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/vite": "^4.0.14",
 		"dompurify": "^3.2.3",
 		"highlight.js": "^11.11.1",
 		"lucide-svelte": "^0.469.0",
